[M2C-3635] Fixes pdp badge vertical alignment (IE11)

--- a/src/pages/product/product.scss
+++ b/src/pages/product/product.scss
@@ -78,6 +78,7 @@ $page-product--bundle-show-top-arrow-shadow: 5px -5px 10px 0 rgba($color_minesha
     }
 
     &__badge-item {
+        display: flex;
         margin-bottom: $page-product_badges-gutter;
 
         @if $page-product_badges-x-axis-placement == left {
